--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
+/* FONTS IMPORT */
 @font-face {
     font-family: title_font;
     src: url("fonts/halflife2.ttf");
 }
-
+/* OVERALL SITE, TITLE AND MENU */
 html, body {
     margin: 0; 
     padding: 0;
@@ -31,7 +32,10 @@ body {
     position: absolute;
     top: 45%; left: 6%;
     z-index: 10;
-    text-align: left;}
+    text-align: left;
+    cursor: default;}
 
 .main_menu > li {margin: 0.5em -40px;}
 .main_menu > li > a {}
+.main_menu > li > a:hover {color: rgba(230,230,230,1);}
+/* DIALOG WINDOWS */
