--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@ html, body {
     margin: 0; 
     padding: 0;
     max-height: 100%;
-    max-width: 100%;}
+    max-width: 100%;
+    font-family: calibri;}
 body {
     background: url("images/background1.png");}
 
@@ -23,7 +24,6 @@ body {
 .main_menu {
     color: white; 
     list-style-type: none;
-    font-family: calibri;
     font-variant: small-caps;
     text-transform: lowercase;
     font-size:1.1em;
@@ -39,3 +39,36 @@ body {
 .main_menu > li > a {}
 .main_menu > li > a:hover {color: rgba(230,230,230,1);}
 /* DIALOG WINDOWS */
+
+.dialog_window {
+    position: absolute;
+    z-index: 15;
+    margin-left: auto; margin-right: auto; left: 0; right: 0;
+    margin-top: 20%;
+    width: 35%;
+    height: 200px;
+    color: white;
+    background: orange;
+    font-variant: small-caps;
+    text-transform: lowercase;
+    border-radius: 7px;
+    background: rgba(190,190,190,0.80);
+}
+.dialog_container {
+    height: 100%;
+    width: 92%;
+    margin-left: auto; 
+    margin-right: auto;
+}
+.dialog_title {
+    color: white; 
+    float:left;
+    font-size: 0.95em;
+    font-weight: normal;
+    padding: 0px;
+    margin-top: 3px; margin-left: -12px;}
+.dialog_close {
+    width: 10px; height: 10px;
+    margin-top: 7px; margin-right: -12px;
+    float: right;
+}
