--- a/style.css
+++ b/style.css
@@ -38,15 +38,14 @@ body {
 .main_menu > li {margin: 0.5em -40px;}
 .main_menu > li > a {}
 .main_menu > li > a:hover {color: rgba(230,230,230,1);}
-/* DIALOG WINDOWS */
 
+/* DIALOG WINDOWS */
 .dialog_window {
     position: absolute;
     z-index: 15;
-    margin-left: auto; margin-right: auto; left: 0; right: 0;
+    margin-left: 40%;
     margin-top: 20%;
-    width: 35%;
-    height: 200px;
+    width: auto;
     color: white;
     background: orange;
     font-variant: small-caps;
@@ -54,11 +53,8 @@ body {
     border-radius: 7px;
     background: rgba(190,190,190,0.80);
 }
-.dialog_container {
-    height: 100%;
-    width: 92%;
-    margin-left: auto; 
-    margin-right: auto;
+.dialog_action {
+background: green;
 }
 .dialog_title {
     color: white; 
@@ -66,14 +62,27 @@ body {
     font-size: 0.95em;
     font-weight: normal;
     padding: 0px;
-    margin-top: 3px; margin-left: -12px;
+    margin-top: 3px; margin-left: 12px;
     cursor: default;}
 .dialog_title:hover {color: rgba(230,230,230,1);}
 .dialog_close {
     width: 10px; height: 10px;
-    margin-top: 7px; margin-right: -12px;
-    float: right;
+    margin-top: 7px; margin-right: 12px;
 }
 .dialog_dynamic_content {
-    width: 100%;
-    background: red; float: left;}
+    background: red;float: left;}
+
+/* SPECIFED CONTENT */
+.window_newGame {}
+.window_newGame > hr {}
+.window_newGame > table {
+    border-spacing: 0;}
+.window_newGame > table > tbody > tr:nth-child(2) > td > img {border: 10px solid black;}
+
+.window_loadGame {}
+
+.window_achievements {}
+
+.window_options {}
+
+.window_quit {}
