--- a/style.css
+++ b/style.css
@@ -38,13 +38,25 @@ body {
 .main_menu > li {margin: 0.5em -40px;}
 .main_menu > li > a {}
 .main_menu > li > a:hover {color: rgba(230,230,230,1);}
-
+/* BUTTONS */
+.steam_button {
+    margin-right: 15px;
+    color: white;
+    font-family: arial;
+    border: 1px outset;
+    border-color: #ccc #bbb #bbb #ccc;
+    border-radius: 2px;
+    padding: 3px 5px;
+    background: rgba(0,0,0,0.05);}
+.active_button {
+    box-shadow: 0px 0px 0px 1px rgba(100,100,100,0.75);
+}
 /* DIALOG WINDOWS */
 .dialog_window {
     position: absolute;
     z-index: 15;
     margin-left: 40%;
-    margin-top: 20%;
+    margin-top: 20%; padding-top: 5px;
     width: auto;
     color: white;
     font-variant: small-caps;
@@ -81,7 +93,7 @@ body {
     background: black;
     height: 1px;
     opacity: 0.3;
-width: 94%;}
+    width: 94%;}
 .window_newGame table {
     border-spacing: 15px 3px;
     text-align: left;
@@ -92,20 +104,44 @@ width: 94%;}
     line-height: 1em;
     font-weight: normal;
     font-size: 1.1em;}
-.window_newGame button {
-    margin-right: 15px;
-    color: white;
-    font-family: arial;
-    border: 1px outset;
-    border-color: #ccc #bbb #bbb #ccc;
-    border-radius: 2px;
-    padding: 3px 5px;
-    background: rgba(0,0,0,0.05);
-}
 .window_newGame > table > tbody > tr:nth-child(2) > td > img {
     border: 10px solid black;}
+.window_loadGame {color: #eee;}
+.window_loadGame > div {
+    overflow-y: scroll;
+    height: 300px;
+    border: 1px inset;
+    border-color: #ccc #bbb #bbb #ccc;
+    background: rgba(0,0,0,0.2);
+    padding: 5px 0px;}
+.window_loadGame table {
+    border-spacing: 10px 4px;}
+.window_loadGame table img {
+    border: 7px solid black;}
+.window_loadGame table td {
+    padding: 0;}
+.window_loadGame table tr td:nth-child(2) {
+    vertical-align: top;}
+.window_loadGame table h3 {
+    margin: 0;
+    font-size: 1em;
+    font-weight: normal;}
+.window_loadGame table p {
+    margin: 0;
+    font-size: 0.75em;
+    text-transform: none;
+    font-variant: normal;}
 
-.window_loadGame {}
+.window_loadGame > button:nth-of-type(1) {
+    float: left;}
+.window_loadGame > button:nth-of-type(2) {
+    float: right;
+    margin-right: 7px;}
+.window_loadGame > button:nth-of-type(3) {
+    float: right;}
+.window_loadGame button {
+    margin-top: 7px;
+    margin-bottom: 7px;}
 
 .window_achievements {}
 
