--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
     font-size: 3.5em;
     position: absolute;
     top: 33%; left: 6%;
-    z-index: 10;}
+    z-index: 5;}
 
 .main_menu {
     color: white; 
@@ -50,6 +50,14 @@ body {
     background: rgba(0,0,0,0.05);}
 .active_button {
     box-shadow: 0px 0px 0px 1px rgba(100,100,100,0.75);
+}
+/* MASK */
+.mask {
+    display: none;
+    position: absolute;
+    z-index: 7;
+    width: 100%; height: 100%;
+    background: rgba(0,0,0,0.4);
 }
 /* DIALOG WINDOWS */
 .dialog_window {
