--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
 .main_menu > li > a {}
 .main_menu > li > a:hover {color: rgba(230,230,230,1);}
 /* BUTTONS */
-.steam_button {
+.steamButton {
     margin-right: 15px;
     color: white;
     font-family: arial;
@@ -48,9 +48,10 @@ body {
     border-radius: 2px;
     padding: 3px 5px;
     background: rgba(0,0,0,0.05);}
-.active_button {
+.activeButton {
     box-shadow: 0px 0px 0px 1px rgba(100,100,100,0.75);
 }
+.title {text-transform: uppercase; font-variant: small-caps; font-size: 0.8em;}
 /* MASK */
 .mask {
     display: none;
@@ -60,99 +61,17 @@ body {
     background: rgba(0,0,0,0.4);
 }
 /* DIALOG WINDOWS */
-.dialog_window {
+.dialogWindow {
+    left: 40%; top: 20%;
     position: absolute;
-    z-index: 15;
-    margin-left: 40%;
-    margin-top: 20%; padding-top: 5px;
+    z-index: 20;
     width: auto;
-    color: white;
-    font-variant: small-caps;
-    text-transform: lowercase;
-    border-radius: 7px;
-    background: rgba(190,190,190,0.80);
+    
+    background: rgba(200,200,200,0.7);
 }
-
-.dialog_title {
-    color: white; 
-    float:left;
-    font-size: 0.95em;
-    font-weight: normal;
-    padding: 0px;
-    margin-top: 3px; margin-left: 12px;
-    cursor: default;}
-.dialog_title:hover {color: rgba(230,230,230,1);}
-.dialog_close {
-    width: 10px; height: 10px;
-    margin-top: 7px; margin-right: 12px;
-}
-.dialog_action {
-    text-align: right;
-}
-.dialog_dynamic_content {
-    float: left;
-    margin: -10px 25px 10px 25px;}
-
+.action {background: green; margin-top: -17px;}
+.content {background: red; margin-top: -10px;}
 /* SPECIFED CONTENT */
-.window_newGame {text-align: right;}
-.window_newGame hr {
-    position: relative;
-    color: black; 
-    background: black;
-    height: 1px;
-    opacity: 0.3;
-    width: 94%;}
-.window_newGame table {
-    border-spacing: 15px 3px;
-    text-align: left;
-    border-collapse: separate;}
-.window_newGame  p {
-    padding: 0; 
-    margin: 0;
-    line-height: 1em;
-    font-weight: normal;
-    font-size: 1.1em;}
-.window_newGame > table > tbody > tr:nth-child(2) > td > img {
-    border: 10px solid black;}
-.window_loadGame {color: #eee;}
-.window_loadGame > div {
-    overflow-y: scroll;
-    height: 300px;
-    border: 1px inset;
-    border-color: #ccc #bbb #bbb #ccc;
-    background: rgba(0,0,0,0.2);
-    padding: 5px 0px;}
-.window_loadGame table {
-    border-spacing: 10px 4px;}
-.window_loadGame table img {
-    border: 7px solid black;}
-.window_loadGame table td {
-    padding: 0;}
-.window_loadGame table tr td:nth-child(2) {
-    vertical-align: top;}
-.window_loadGame table h3 {
-    margin: 0;
-    font-size: 1em;
-    font-weight: normal;}
-.window_loadGame table p {
-    margin: 0;
-    font-size: 0.75em;
-    text-transform: none;
-    font-variant: normal;}
-
-.window_loadGame > button:nth-of-type(1) {
-    float: left;}
-.window_loadGame > button:nth-of-type(2) {
-    float: right;
-    margin-right: 7px;}
-.window_loadGame > button:nth-of-type(3) {
-    float: right;}
-.window_loadGame button {
-    margin-top: 7px;
-    margin-bottom: 7px;}
-
-.window_achievements {}
-
-.window_options {}
-
-.window_quit {}
+.newGame .action {}
+.newGame .action h2 {color: white; display: inline-block; margin: 0; padding: 0; margin-top: 3px; margin-left: 6px;}
+.newGame .action img {width: 9px; display: inline-block; float: right; margin-top: 6px; margin-right: 6px;}
